# pr228b-analyser

./: .gitignore  CMakeLists.txt  CUTpad1vstof.C  CUTpad1vstof3.C  CUTpid1098.C  CUTpid126.C  CUTpid138.C  CUTpid150.C  DATA.C  DATA.h  FrontBackEnergy_run32.C  GammaData.h  LEPS.h  Makefile  Parameters.c  Parameters.h  README.md  RawData.c  RawData.h  SiliconData.c  SiliconData.h  Spectra.C  TDC_Calibration_PR228B.h  Upstream_W1_HitPattern.C  W1.c  X1.c  X1.h  adc.c  chain.C  configPR228B.cfg  f-plane.c  hPos_run110_un_gated.C  multiTDC.c  multiTDC.h  pr228b.odb  scaler.c  srim.h
analysis/: CI.C  CUTX1tof1098.C  CUTpad1vstof2.C  CUTpid1030.C  CUTpid1042.C  CUTpid1070.C  CUTpid1107.C  CUTpid1109.C  CUTpid132.C  CUTpid4.C  CUTpidWeek2.C  Calibrate.C  Calibrate.h  Carbon  Carbon.C  Carbon.h  CheckCalibration.C  CheckCalibration.h  Correlation.C  DblInt.C  DriftTimeInt.C  GausFit.C  JJ_autotrim-staightline.C  Li2CO3  Li2CO3.C  Li2CO3.cfg  Li2CO3.h  Pedestals  Pedestals.C  Pedestals.h  README.md  RetuneCarbon.C  RetuneLithium.C  Spectra.C  TDCAlign  TDCAlign.C  TDCAlign.h  analyse.sh  analyse_all.sh  analyse_carbon.sh  (+7 more)
src/: GammaData.cpp  GammaData.h  LEPS.cpp  Parameters.c  Parameters.cpp  RawData.cpp  RawData.h  SiliconData.c  W1.c  W1.cpp  W1.h  X1.c  X1.h  adc.cpp  ame.cpp  ame.h  config.h.in  f-plane.c  multiTDC.c  multiTDC.cpp  multiTDC.h  qdc.c
